# XO_LVGL

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/atanisoft__esp_lcd_touch_xpt2046/: .component_hash  esp_lcd_touch_xpt2046.c  idf_component.yml
main/: CMakeLists.txt  defines.h  idf_component.yml  main.c
main/ui/: lvgl_xo_game.c  ui_defines.h  ui_init.c  ui_init.h
main/ui/ui_components/: create_message_box.c  create_restart_btn.c  create_topbar.c  create_xo.c
